// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entry should render default 1`] = `
<div>
  <div
    class="border"
  />
</div>
`;

exports[`Entry should render with favorite 1`] = `
<div>
  <div
    class="border"
  >
    <div
      class="container fav"
    >
      <div
        class="imageContainer"
      >
        <img
          alt="Bild von name"
          class="image"
          src="image"
        />
      </div>
      <div
        class="info"
      >
        <h2
          class="name"
        >
          name
        </h2>
        <p
          class="description"
        >
          description
        </p>
        <div>
          Anzahl Spieler
        </div>
        <div>
          Altersempfehlung
        </div>
        <div>
          Spieldauer
        </div>
        <div
          data-condition="false"
        >
          Einfache Regeln
        </div>
        <div
          data-condition="false"
        >
          Trinkspiel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Entry should render with intersection 1`] = `
<div>
  <div
    class="border"
  >
    <div
      class="container "
    >
      <div
        class="imageContainer"
      >
        <img
          alt="Bild von name"
          class="image"
          src="image"
        />
      </div>
      <div
        class="info"
      >
        <h2
          class="name"
        >
          name
        </h2>
        <p
          class="description"
        >
          description
        </p>
        <div>
          Anzahl Spieler
        </div>
        <div>
          Altersempfehlung
        </div>
        <div>
          Spieldauer
        </div>
        <div
          data-condition="false"
        >
          Einfache Regeln
        </div>
        <div
          data-condition="false"
        >
          Trinkspiel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Entry should render with same players 1`] = `
<div>
  <div
    class="border"
  >
    <div
      class="container "
    >
      <div
        class="imageContainer"
      >
        <img
          alt="Bild von name"
          class="image"
          src="image"
        />
      </div>
      <div
        class="info"
      >
        <h2
          class="name"
        >
          name
        </h2>
        <p
          class="description"
        >
          description
        </p>
        <div>
          Anzahl Spieler
        </div>
        <div>
          Altersempfehlung
        </div>
        <div>
          Spieldauer
        </div>
        <div
          data-condition="false"
        >
          Einfache Regeln
        </div>
        <div
          data-condition="false"
        >
          Trinkspiel
        </div>
      </div>
    </div>
  </div>
</div>
`;
